[gd_scene load_steps=15 format=3 uid="uid://deuwvni3krd5j"]

[ext_resource type="Script" path="res://Scripts/Menu/main_menu_controls.gd" id="1_dwhgb"]
[ext_resource type="PackedScene" uid="uid://cft4tjwodhlq1" path="res://Zombie/main_menu_zombie.tscn" id="3_nj8af"]
[ext_resource type="Script" path="res://Scripts/Zombie/main_menu_zombie.gd" id="4_3dbg5"]
[ext_resource type="PackedScene" uid="uid://book6dvavvejh" path="res://Interactables/lemonade_stand.tscn" id="5_w0rjq"]
[ext_resource type="Theme" uid="uid://ckgfmtm4f8akv" path="res://Themes/menu_theme.tres" id="7_k102j"]
[ext_resource type="FontFile" uid="uid://nuspnysmmlfs" path="res://Assets/Fonts/Montserrat-SemiBold.ttf" id="9_o15hm"]
[ext_resource type="Texture2D" uid="uid://3tst82wpktye" path="res://Assets/Textures/ZombieUI/cross.png" id="9_qhxur"]
[ext_resource type="Texture2D" uid="uid://c5pdexm3hrp8y" path="res://Assets/Textures/SplashScreens/Black Splash.png" id="10_fxybc"]
[ext_resource type="LabelSettings" uid="uid://cbj6st44ixp0g" path="res://UI/credit_label_settings.tres" id="10_o4wu7"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5sd3x"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_ii1wc"]
sky_material = SubResource("ProceduralSkyMaterial_5sd3x")

[sub_resource type="Environment" id="Environment_vqltd"]
background_mode = 1
background_color = Color(0.941176, 0.984314, 1, 1)
sky = SubResource("Sky_ii1wc")
ambient_light_color = Color(0.455053, 0.831599, 0.836578, 1)
tonemap_mode = 2
volumetric_fog_enabled = true
volumetric_fog_density = 0.01
volumetric_fog_albedo = Color(0.513726, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_a6wmm"]
font = ExtResource("9_o15hm")
font_size = 106
font_color = Color(0.210817, 0.357169, 0.377705, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6qopu"]
line_spacing = 24.0
font = ExtResource("9_o15hm")
font_size = 24
font_color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_dwhgb")

[node name="AudioPlayers" type="Node" parent="."]

[node name="BGMPlayer" type="AudioStreamPlayer" parent="AudioPlayers"]
volume_db = -6.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vqltd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
light_energy = 0.6
shadow_enabled = true

[node name="MainMenuCam" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 1.117, 2.544, 0.36)
projection = 1
size = 6.5

[node name="LemonadeStand" parent="." instance=ExtResource("5_w0rjq")]
transform = Transform3D(1, 0, -6.3573e-08, 0, 1, 0, 6.3573e-08, 0, 1, 0.1, 0.5, 6.425)
visible = false

[node name="MainMenuZombie" parent="." instance=ExtResource("3_nj8af")]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, -2.5, 1, 5)
script = ExtResource("4_3dbg5")

[node name="MenuUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleText" type="Label" parent="MenuUI"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -343.0
offset_right = 400.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
text = "The Last (Lemonade) Stand"
label_settings = SubResource("LabelSettings_a6wmm")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuUI"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = 100.0
offset_right = 252.0
offset_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartGameButton" type="Button" parent="MenuUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("7_k102j")
text = "Start Game"

[node name="QuitGameButton" type="Button" parent="MenuUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("7_k102j")
text = "Quit Game"

[node name="ToggleInvertedBox" type="HBoxContainer" parent="MenuUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 145.0
offset_top = -168.0
offset_right = 649.0
offset_bottom = -118.0
grow_vertical = 0

[node name="ToggleInvertedButton" type="Button" parent="MenuUI/ToggleInvertedBox"]
layout_mode = 2
theme = ExtResource("7_k102j")
text = "Invert Mouse?
"

[node name="TickBoxTexture" type="TextureRect" parent="MenuUI/ToggleInvertedBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("9_qhxur")
expand_mode = 1

[node name="CreditsButton" type="Button" parent="MenuUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 146.0
offset_top = -241.0
offset_right = 270.0
offset_bottom = -193.0
grow_vertical = 0
theme = ExtResource("7_k102j")
text = "Credits"

[node name="BlackFadeScreen" type="TextureRect" parent="MenuUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("10_fxybc")

[node name="CreditsUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReturnToMenuButton" type="Button" parent="CreditsUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 145.0
offset_top = -167.0
offset_right = 271.0
offset_bottom = -118.0
grow_vertical = 0
theme = ExtResource("7_k102j")
text = "Quit Credits"

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="CreditsTitle" type="Label" parent="CreditsUI/VBoxContainer"]
layout_mode = 2
text = "A Game by Waiting Games"
label_settings = SubResource("LabelSettings_6qopu")
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="CreditsUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="LeftLabel2" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Godot Splash Screen:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel2" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Kenney.nl"
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel3" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Zombie Mesh & Animations:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel3" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Mixamo"
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel4" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Bird Ambience:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel4" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Sonniss GDC Free Download"
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel5" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Tree Ambience:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel5" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Sonniss GDC Free Download"
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel6" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Zombie Crowd Ambience:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel6" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Sonniss GDC Free Download"
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel12" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Glass, Jug, Ice, Sugar & Lemon SFX:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel12" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Soniss GDC Free Download"
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel14" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Fart SFX:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel14" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Soniss GDC Free Download"
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel15" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Boo SFX:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel15" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Pixabay"
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel7" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Suburb Asset Pack: "
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel7" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Kenney.nl"
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel8" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Graveyard Asset Pack: "
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel8" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Kenney.nl"
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel9" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Montserrat (SemiBold) Font:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel9" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Google Fonts"
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel10" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Day Timer UI:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel10" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Kenney.nl"
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel11" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Lemonade Song Censor Beep:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel11" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Pixabay \"Censor Beep\""
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel13" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Lemonade Stand Cloth Texture:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel13" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Freepik.com \"vichy-background-red-classic-vichy-style\""
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel18" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Lemonade Stand Wood Texture:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel18" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Polyhaven.com \"brown_planks_09\""
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel16" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Zombie Mask Paper Texture:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel16" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Pexels.com \"green-pexels-ron-lach-10526880\""
label_settings = ExtResource("10_o4wu7")

[node name="LeftLabel17" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Zombie Mask Cardboard Texture:"
label_settings = ExtResource("10_o4wu7")
horizontal_alignment = 2

[node name="RightLabel17" type="Label" parent="CreditsUI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Pexels.com \"pexels-jonathan-west-339535484-14129745\""
label_settings = ExtResource("10_o4wu7")

[connection signal="pressed" from="MenuUI/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MenuUI/VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
[connection signal="pressed" from="MenuUI/ToggleInvertedBox/ToggleInvertedButton" to="." method="_on_toggle_inverted_button_pressed"]
[connection signal="pressed" from="MenuUI/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CreditsUI/ReturnToMenuButton" to="." method="_on_return_to_menu_button_pressed"]
